# baaplay

./: CMakeLists.txt
src/: AlsaPlayer.cpp  AlsaPlayer.hpp  NativeSocket.hpp  baaplay.cpp
